Bug 442372 - Rotoscoping keyframe data not copied to clipboard
Summary: Rotoscoping keyframe data not copied to clipboard
Status: RESOLVED FIXED
Alias: None
Product: kdenlive
Classification: Applications
Component: Video Effects & Transitions (other bugs)
Version First Reported In: 21.08.1
Platform: Other Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Julius Künzel
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-09-13 07:06 UTC by thaylor.peter
Modified: 2021-09-26 17:06 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.12.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description thaylor.peter 2021-09-13 07:06:56 UTC
SUMMARY
Rotoscoping effect's keyframe data is not copied to clipboard.

STEPS TO REPRODUCE
1. Add old rotoscoping effect to a clip.
2. Create a few keyframes
3. Copy keyframes to clipboard
4. Add new rotoscoping (mask) effect to the clip
5. Try to import keyframes from clipboard. It is not possible, there is no data to import

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 10, 20H2
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Julius Künzel 2021-09-25 09:21:24 UTC
Thanks for your report! I can confirm this behavior and going to try to find a fix soon.
Comment 2 Julius Künzel 2021-09-26 17:06:26 UTC
Git commit ad2c3f22404efa997641d8c64454663d0e1da508 by Julius Künzel.
Committed on 26/09/2021 at 17:05.
Pushed by jlskuz into branch 'master'.

Make it possible to copy and import rotoscoping keyframes
FIXED-IN: 21.12.0

M  +5    -0    src/assets/keyframes/model/keyframemonitorhelper.cpp
M  +2    -0    src/assets/keyframes/model/keyframemonitorhelper.hpp
M  +1    -1    src/assets/model/assetparametermodel.cpp
M  +19   -0    src/assets/view/widgets/keyframeimport.cpp
M  +1    -0    src/assets/view/widgets/keyframeimport.h
M  +3    -0    src/assets/view/widgets/keyframewidget.cpp

https://invent.kde.org/multimedia/kdenlive/commit/ad2c3f22404efa997641d8c64454663d0e1da508