Make it possible to copy and import rotoscoping keyframes

BUG: 442372
FIXED-IN: 21.12.0