src/assets/view/widgets/keyframeimport.cpp
@@ -151,6 +151,9 @@ KeyframeImport::KeyframeImport(const QString &animData, std::shared_ptr<AssetPar
             if(name.contains("Position X") || name.contains("Position Y") || name.contains("Size X") || name.contains("Size Y")) {
                 count++;
             }
+        } else if (type == ParamType::Roto_spline) {
+            m_simpleTargets.insert(i18n("Rotoscoping shape"), idx);
+            QString name(m_model->data(idx, AssetParameterModel::NameRole).toString());
         } else if (type == ParamType::AnimatedRect) {
             m_geometryTargets.insert(m_model->data(idx, Qt::DisplayRole).toString(), idx);
         }
@@ -339,6 +342,10 @@ void KeyframeImport::updateDataDisplay()
             }
         }
         updateRange();
+        return;
+    }
+    if (type == ParamType::Roto_spline) {
+        m_sourceCombo->addItem(i18n("Rotoscoping shape"), ImportRoles::RotoData);
         return;
     }
     double wDist = m_maximas.at(2).y() - m_maximas.at(2).x();
@@ -538,6 +545,10 @@ QString KeyframeImport::selectedData() const
             maximas = QPoint(qMin(m_maximas.at(ix).x(), 0), qMax(m_maximas.at(ix).y(), pCore->getCurrentProfile()->height()));
         }
         std::shared_ptr<Mlt::Properties> animData = KeyframeModel::getAnimation(m_model, m_dataCombo->currentData().toString());
+        if (m_dataCombo->currentText() == "spline") {
+            QJsonDocument doc = QJsonDocument::fromJson(m_dataCombo->currentData().toString().toLocal8Bit());
+            return QString(doc.toJson(QJsonDocument::Compact));
+        }
         std::shared_ptr<Mlt::Animation> anim(new Mlt::Animation(animData->get_animation("key")));
         animData->anim_get_double("key", m_inPoint->getPosition(), m_outPoint->getPosition());
         int existingKeys = anim->key_count();
@@ -807,6 +818,14 @@ void KeyframeImport::importSelectedData()
             // Import our keyframes
             int frame = 0;
             KeyframeImport::ImportRoles convertMode = static_cast<KeyframeImport::ImportRoles> (m_sourceCombo->currentData().toInt());
+            if (convertMode == ImportRoles::RotoData && m_targetCombo->currentText() == i18n("Rotoscoping shape")) {
+                QJsonObject json = QJsonDocument::fromJson(selectedData().toLocal8Bit()).object();
+                for (int i = 0; i < json.count(); i++) {
+                    int frame = json.keys().at(i).toInt();
+                    km->addKeyframe(GenTime(frame - m_inPoint->getPosition() + m_offsetPoint->getPosition(), pCore->getCurrentFps()), KeyframeType::Linear, json.value(json.keys().at(i)), true, undo, redo);
+                }
+                continue;
+            }
             mlt_keyframe_type type;
             mlt_rect firstRect = animData->anim_get_rect("key", anim->key_get_frame(0));
             for (int i = 0; i < anim->key_count(); i++) {
